--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "ffmpeg-binaries": "^4.0.0",
+    "heroku": "^7.22.7",
     "opusscript": "0.0.6",
     "ytdl-core": "^0.29.1"
   }
